devops/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: local-app-service
  namespace: default # Or your preferred local namespace
  labels:
    app: local-app
    cogccaresoln: local-cogccaresoln
    deployment: local-dev
    region: local-region
spec:
  ports:
    - protocol: TCP
      port: 3021
      targetPort: 3021
  selector:
    app: local-app
    cogccaresoln: local-cogccaresoln
    deployment: local-dev
    region: local-region
  type: NodePort
