devops/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: local-app-ingress
  namespace: default # Or your preferred local namespace
  labels:
    app: local-app
    cogccaresoln: local-cogccaresoln
    deployment: local-dev
    region: local-region
  annotations:
    nginx.ingress.kubernetes.io/enable-rewrite-log: 'true'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx # or whatever ingress controller you are using locally.
  rules:
    - host: local.example.com # Or your local host
      http:
        paths:
          - backend:
              service:
                name: local-app-service
                port:
                  number: 3021
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - local.example.com # Or your local host
      secretName: local-tls-secret # ensure that this secret exists.
